// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogActions组件 快照测试 基本使用 1`] = `
<div
  className="DialogActions__DialogActionsWrapper-ibc7so-0 kTvEtc sinoui-dialog-actions"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Button__ButtonLayout-sc-15sa99-0 duCArv sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Disagree
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Button__ButtonLayout-sc-15sa99-0 duCArv sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Agree
  </button>
</div>
`;

exports[`DialogActions组件 快照测试 按钮垂直显示 1`] = `
<div
  className="DialogActions__DialogActionsWrapper-ibc7so-0 bfxQEv sinoui-dialog-actions"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Button__ButtonLayout-sc-15sa99-0 duCArv sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Disagree
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 gJsqSy sinoui-base-button Button__ButtonLayout-sc-15sa99-0 duCArv sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Agree
  </button>
</div>
`;
